<Input/> - fix overflow (FF only) (#6245)
* <Input/> - fix overflow (FF only)

* <Input/> - fix overflow (FF only)

--- a/src/Input/Input.st.css
+++ b/src/Input/Input.st.css
@@ -40,6 +40,8 @@
   background: transparent;
   box-shadow: none;
   width: inherit;
+  /* FF only */
+  overflow-block: scroll;
 }
 
 .wrapper {
